--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+
+# lwang ignore
+.idea/
+build/
+rasp_detection/3rdpart/
+rasp_detection/darknet_modify/*.weights
+cmake-build-debug/
+lw.log
+rasp_detection/darknet_modify/*.jpg
